Version 4.1

Bug Fixes:
Fixed a bug with the info button to support displaying object information for S3-compatible cloud providers.

Improvements:
Performance Testing: Graph and non-graph display are labeled as PUT or GET.
Versioning: Latest file will be in blue. Deleted files will be in red.
Versioning: Version enabled buckets will be displayed in green.

New Features:
Command-line interface: put, get, delete, makebucket, rmbucket,listbuckets, syncfroms3, and synctos3.

Features:

1. Tier buckets to and from Amazon Glacier.
2. Sync files to and from S3 storage.
3. Stream music.
4. Text editor.
5. Modify Bucket and Object ACL's.
6. Take screen shots and upload them to your bucket.
7. Bucket versioning and life cycles.
8. Graphical and console based background syncing.
9. Store multiple Amazon S3 accounts.
10. Image viewer.
11. Migrate buckets between S3 accounts.
12. Bucket search.
13. Performance testing with graphs.
14. Command-line interface.


Command-line Options:

java -jar CloudExplorer.jar put filename bucket
java -jar CloudExplorer.jar get filename bucket
java -jar CloudExplorer.jar delete filename bucket

#List bucket contents
java -jar CloudExplorer.jar ls bucket

#List buckets
java -jar CloudExplorer.jar listbuckets

#Delete a bucket
java -jar CloudExplorer.jar rmbucket bucket

#Sync to S3
java -jar CloudExplorer.jar synctos3 location bucket

#Sync from S3
java -jar CloudExplorer.jar syncfroms3 destination bucket

*Please note that Cloud Explorer will use the first account listed in the config file*